
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    Support Forum: http://forum.darkbot.org
    *******************************************************

Darkbot 8rc1: Mar 04, 2005
	- Removed an unneeded line in main.c, that was used to "hide"
	  warnings on WIN32, which is a very bad idea.
	- Changed check_dbtimers() so it ignores the CVS directory,
	  which contains information for the CVS server.  This
	  fixes a situation that seems to have only presented itself
	  in FreeBSD, where it thinks the CVS directory is a 
	  timer, and sends out random garble every few seconds.
	
	- configure.ac and source/Makefile.am; very minor updates.

	- Fixed randq, which I accidentally broke when adding the
	  -I switch. This also fixes some problems that turned up
	  on FreeBSD.

	- Fixed a warning that came up in permbans.c about mixing 
	  types when compiling on OS X.  I changed %d on line 198 
	  to %ud.

	- configure now checks for clock_t.

 	- configure now automatically checks for snprintf, and 
	  uses a replacement if it's not found.

	- docs/INSTALL.txt is now INSTALL in the toplevel dir.
	  Another thing for automake to stop complaining about.

	- The original configure script is now located in the
	  scripts directory, and is called "Setup". 

	- docs/contributors.txt is now called AUTHORS in the
	  top level of the distribution.  Another thing automake
	  complains about.  I also worked on the appearance of 
	  this file, hopefully it looks a little better now.

	- README.txt in the toplevel is now called "README". 
	  Automake complains about this file also, if it's not
	  found.

	- This file is now called ChangeLog, and has been moved
	  to the toplevel distribution dir.  The reason for this 
	  is that automake complains, if it can't find this file.

	- configure now checks for the presence of windows.h, 
	  and defines WIN32, if it's found.  This removes the